# control_panel_angel_plugins

./: CMakeLists.txt  control_panel_plugins.xml  package.xml
include/cpangel_controller/: CPAngelController.h
src/: CPAngelController.cpp
ui/: CPAngelController.ui
